@@ -120,6 +120,24 @@ section: fe-guidelines
   </div>
 </div>
 
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 flex-self-vcenter">
+    <div class="flex flex-column flex-items-end bordered-container color-global-light">
+      <div class="bg-pm-blue-light p1">div</div>
+      <span class="bg-pm-blue p1">span</span>
+      <em class="bg-pm-blue-dark p1">em</em>
+    </div>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;div <strong>class="flex flex-column flex-items-end"</strong>&gt;
+  &lt;div&gt;div&lt;/div&gt;
+  &lt;span&gt;span&lt;/span&gt;
+  &lt;em&gt;em&lt;/em&gt;
+&lt;/div&gt;
+</code></pre>
+  </div>
+</div>
+
 <p>Additional class: <code>flex-nowrap</code> applies <code>flex-wrap: nowrap;</code> to element (to avoid children wrap to the line).</p>
 
 
