@@ -187,7 +187,7 @@ subsection: icons
 
   <h3>How to use it at different sizes?</h3>
 
-  <div class="flex flex-spacebetween flex-item-end mb2 onmobile-flex-column onmobile-flex-item-nostretch ">
+  <div class="flex flex-spacebetween flex-items-end mb2 onmobile-flex-column onmobile-flex-item-nostretch ">
     <div class="w49 aligncenter">
       <svg viewBox="0 0 16 16" class="icon-50 shape-twitter-2" role="img" focusable="false">
         <use xlink:href="#shape-twitter"></use>
@@ -214,7 +214,7 @@ subsection: icons
 
   <h3>Other examples</h3>
 
-  <div class="flex flex-spacebetween flex-item-end mb2 onmobile-flex-column onmobile-flex-item-nostretch ">
+  <div class="flex flex-spacebetween flex-items-end mb2 onmobile-flex-column onmobile-flex-item-nostretch ">
     <div class="w49 aligncenter">
       <span class="inline-flex bg-global-success rounded50 p0-25">
         <svg viewBox="0 0 16 16" class="icon-16p mauto fill-global-light" aria-hidden="true" role="img" focusable="false">
@@ -245,7 +245,7 @@ subsection: icons
   </div>
 
   <p>Bigger shape examples: </p>
-  <div class="flex flex-spacebetween flex-item-end mb2 onmobile-flex-column onmobile-flex-item-nostretch ">
+  <div class="flex flex-spacebetween flex-items-end mb2 onmobile-flex-column onmobile-flex-item-nostretch ">
     <div class="w49 aligncenter">
       <span class="inline-flex bg-global-success rounded50 p0-25">
         <svg viewBox="0 0 16 16" class="icon-25p mauto path2x fill-global-light" aria-hidden="true" role="img" focusable="false">
