@@ -3,6 +3,7 @@
 ## Updated/fixes
 
 - updated `hr` color
+- updated `flex-items-end` helper and added example (renamed it, was `flex-item-end`, not consistent)
 
 
 # [1.6.13] - 2019-06-04
